--- a/Recipe.html
+++ b/Recipe.html
@@ -3,7 +3,7 @@
 
 <head>
  <meta charset="UTF-8">
-<title>My favorite Recipes</title>
+<title>My favorite Recipes, test</title>
 </head>
     <body>
         <nav>
